# DA-PYTHON-9

./: README.md  db.sqlite3  flake8.txt  manage.py  pyproject.toml
LITReview/: settings.py
authentication/: admin.py  forms.py  models.py  views.py
authentication/templates/authentication/: login.html  signup.html
authenticationold/: admin.py  apps.py  models.py
flake-report/: index.html  website.forms.report.html  website.forms.source.html  website.models.report.html  website.models.source.html  website.views.report.html  website.views.source.html
templates/: base.html
website/: .tests.py.icloud  forms.py  models.py  views old.py  views.py
website/migrations/: 0003_alter_ticket_title_alter_userfollows_user.py
website/templates/website/: create_review.html  create_review_from_ticket.html  create_ticket.html  flux.html  follow_users.html  posts.html  update_review.html  update_ticket.html
